adding service Call

--- a/DevStartPage/DevStartPage.Web/Views/Shared/_Layout.cshtml
+++ b/DevStartPage/DevStartPage.Web/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
 <body>
     @RenderBody()
     <!-- REQUIRED JS SCRIPTS -->
-@*<script src="~/Content/plugins/jquery-2.2.3.min.js"></script>
+<script src="~/Content/plugins/jquery-2.2.3.min.js"></script>
     <script src="~/Content/plugins/bootstrap.min.js"></script>
 
     <script src="node_modules/systemjs/dist/system.src.js"></script>
@@ -30,10 +30,10 @@
             console.error(err);
         });
     </script>
-    <script src="~/Content/plugins/chartjsplugin.js"></script>*@
+    <script src="~/Content/plugins/chartjsplugin.js"></script>
 
 	@*Prod Deploy Scripts*@
-<script src="~/Scripts/lib/js/vendors.min.js"></script>
-<script src="~/Scripts/main.app.min.js"></script>
+@*<script src="~/Scripts/lib/js/vendors.min.js"></script>
+<script src="~/Scripts/main.app.min.js"></script>*@
 </body>
 </html>
