--- a/DevStartPage/DevStartPage.Web/Content/styles/main.css
+++ b/DevStartPage/DevStartPage.Web/Content/styles/main.css
@@ -3676,29 +3676,46 @@ tbody.collapse.in {
 .topnav {
 	overflow: hidden;
 	background-color: #333;
+	color: white;
 }
 
-.topnav a {
+.topnav ul {
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+	overflow: hidden;
+	background-color: #333;
+}
+
+.topnav li {
 	float: left;
-	align-content: center;
-	color: #f2f2f2;
-	text-align: center;
-	padding: 14px 16px;
-	text-decoration: none;
-	font-size: 17px;
 }
 
-.topnav a:hover {
+.topnav li a {
+	display: block;
+	color: white;
+	text-align: center;
+	padding: 16px 16px;
+	text-decoration: none;
+}
+
+.topnav li a:hover:not(.active) {
 	background-color: #ddd;
 	color: black;
 }
 
-.topnav a.active {
-	background-color: #4CAF50;
-	color: white;
-}
+.topnav .active {
+		background-color: black;
+		color: white;
+	}
 
-.navbar-header:before, .navbar-header:after {
+	.topnav > li > a {
+		padding: 5px 5px 5px 15px;
+		display: block;
+		font-size: 14px;
+&:hover, &:focus, &:active { color: #18BC9C; box-shadow: none;}
+	}
+		.navbar-header:before, .navbar-header:after {
   content: " ";
   display: table; }
 
