Updating Start page with intervaul for time

--- a/DevStartPage/DevStartPage.Web/app/StartPage/startpage.component.html
+++ b/DevStartPage/DevStartPage.Web/app/StartPage/startpage.component.html
@@ -2,7 +2,7 @@
 		<h1 align="center" style="color: whitesmoke">{{ipAddress}}</h1>
 		<h1 align="center" style="color: whitesmoke">{{currentDate | date: 'MM/dd/yy HH:mm a'}}</h1>
 		<h1 align="center" style="color: whitesmoke; display: inline-flex" >
-			Wedding in: <countdown units="Days | Hours | Minutes" end="April 28, 2018"></countdown>
+			<!--Wedding in: <countdown units="Days | Hours | Minutes" end="April 28, 2018"></countdown>-->
 		</h1>
 			<div class="row">
 				<div class="col-md-12">
