Updates for time display

--- a/DevStartPage/DevStartPage.Web/app/StartPage/startpage.component.html
+++ b/DevStartPage/DevStartPage.Web/app/StartPage/startpage.component.html
@@ -1,6 +1,6 @@
 ﻿	<div class="board" style="background: transparent">
 		<h1 align="center" style="color: whitesmoke">{{ipAddress}}</h1>
-		<h1 align="center" style="color: whitesmoke">{{currentDate | date: 'MM/dd/yy HH:mm a'}}</h1>
+		<h1 align="center" style="color: whitesmoke">{{currentDate | date: 'MM/dd/yy  h:mm a'}}</h1>
 		<h1 align="center" style="color: whitesmoke; display: inline-flex" >
 			<!--Wedding in: <countdown units="Days | Hours | Minutes" end="April 28, 2018"></countdown>-->
 		</h1>
