Updating Gulp File

--- a/DevStartPage/DevStartPage.Web/Views/Shared/_Layout.cshtml
+++ b/DevStartPage/DevStartPage.Web/Views/Shared/_Layout.cshtml
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" href="~/app/Shared/Widgets/Spinner/spinner.css">
 	<link rel="stylesheet" href="~/Content/font-awesome.css">
 	<link rel="stylesheet" href="~/Content/font-awesome.min.css">
+
 	<title>DevStartPage</title>
 </head>
 <body>
@@ -32,7 +33,7 @@
 	</script>
 	<script src="~/Content/plugins/chartjsplugin.js"></script>*@
 
-	@*Prod Deploy Scripts*@
+	@*Prod Deploy Scripts -- Only Need to Copy the Scripts Folder to Server*@
 	<script src="~/Scripts/lib/js/vendors.min.js"></script>
 	<script src="~/Scripts/main.app.min.js"></script>
 </body>
