Updating Start PAge and adding File Reader and Soap request Examples

--- a/DevStartPage/DevStartPage.Web/app/StartPage/startpage.component.html
+++ b/DevStartPage/DevStartPage.Web/app/StartPage/startpage.component.html
@@ -130,15 +130,15 @@
 
 
 								<td>
-									<a target="_blank" href="https://account.meraki.com/secure/login/dashboard_login"><img src="../../Img/Meraki-100px.jpeg" /></a>
+									<a target="_blank" href="https://arlo.netgear.com/#/login"><img src="../../Img/Arlo.png" /></a>
+								</td>
+								
+								<td>
+									<a target="_blank" href="https://ring.com/users/sign_in"><img src="../../Img/Ring.jpg" /></a>
 								</td>
 
 								<td>
 									<a target="_blank" href="https://www.changeip.com/accounts/clientarea.php"><img src="../../Img/Changeip-100px.png" /></a>
-								</td>
-
-								<td>
-									<a target="_blank" href="http://imgur.com/"><img src="../../Img/Imgur-100px.png" /></a>
 								</td>
 
 								<td>
