Updating Testing and CoServ URL

--- a/DevStartPage/DevStartPage.Web.AngularCli/src/app/StartPage/startpage.component.html
+++ b/DevStartPage/DevStartPage.Web.AngularCli/src/app/StartPage/startpage.component.html
@@ -71,7 +71,7 @@
 							</td>
 
 							<td>
-								<a target="_blank" href="https://myaccount.coserv.com/"><img src="Src/assets/Content/Img/coserv-100px.png" /></a>
+								<a target="_blank" href="https://coserv.smarthub.coop/Login.html#"><img src="Src/assets/Content/Img/coserv-100px.png" /></a>
 							</td>
 
 							<td>
